--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,7 +8,7 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     attributes:
       user:
-        name: 名前
+        userid: ユーザーID
         password: パスワード
         password_confirmation: パスワード確認
         email: メールアドレス
