--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -11,7 +11,7 @@ ja:
       inactive: "登録が完了していません。"
       invalid: "メールアドレスかパスワードが不正です。"
       locked: "アカウントがロックされています。"
-      last_attempt: "あなたのアカウントがロックされる前に、もう1つの試みを持っています。"
+      last_attempt: "もう一度ログインに失敗するとアカウントがロックされます。"
       not_found_in_database: "メールアドレスまたはパスワードが無効です。"
       timeout: "一定時間が経過したため、再度ログインが必要です"
       unauthenticated: "ログインまたは登録が必要です。"
@@ -46,7 +46,7 @@ ja:
     unlocks:
       send_instructions: "アカウントのロックを解除する方法を数分以内にメールでご連絡します。"
       send_paranoid_instructions: "アカウントが存在する場合、ロックを解除する方法をメールでご連絡します。"
-      unlocked: "アカウントのロックが解除されました。ログインしています。"
+      unlocked: "アカウントのロックが解除されました。"
   errors:
     messages:
       already_confirmed: "は既に登録済みです。ログインしてください"
